--- a/arbolBinario/proyectoUno/proyectoUno.csproj
+++ b/arbolBinario/proyectoUno/proyectoUno.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Cola.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedBinariaLlena.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
